<resources>
    <string name="app_name" translatable="false">intellligent Accident Evaluation</string>
    <string name="email_edt">Email</string>
    <string name="password_edt">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_txt">Create New Account</string>
    <string name="fullname_edt">Full Name</string>
    <string name="idNum">Id Number</string>
    <string name="register_btn">Register</string>
    <string name="join_accident">Join Accident</string>
    <string name="add_accident">Add Accident</string>
    <string name="user_name_edt">Username</string>
    <string name="upload_title_txt">Upload your avatar</string>∂
    <string name="upload_post_txt">Upload your post </string>
    <string name="create_post_btn">Create a post</string>
    <string name="ella_txt">Ella</string>
    <string name="follow_txt">Follow</string>
    <string name="ihaaveaccount">I have an Account</string>
    <string name="idonthaaveaccount">Dont have Account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="user_id">User Id</string>
    <string name="accident_proof">Accident Proof</string>
    <string name="choose_picture">Choose picture</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="joined_at">Joined at :</string>
    <string name="second_userid_part_is">Second userId part is :</string>
    <string name="type_here">Type here...</string>
    <string name="accident_address">Accident Address</string>
    <string name="car_plate">Car Plate</string>
    <string name="accident_time">Accident Time</string>
    <string name="time">time</string>
    <string name="your_code_n_note_this_code_for_the_second_user_to_scan_it">Your Code \n Note : this code for the second user to scan it</string>
    <string name="accident_id_member">Accident Id Member</string>
    <string name="add">Add</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="helpertxt">choose Strong passowrd \n Contains Capital and special cases</string>
    <string name="emergency" >emergency</string>
    <string name="emergency_info">emergency Info</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="q1">\"what type of accident did you have ? \n a- back crash \n b- frontal crash \"</string>
    <string name="q2">where did the accident happended ? \n a-main street \n b-traffic light \n c- speed bump</string>
    <string name="q3">\"are both cars between lines when the accident happened ? \n a- yes \n b- no \"</string>
    <string name="q4">\"what color was the light when accident happened? \n a- green \n b- yellow \n c- other \"</string>
    <string name="q5">\"where did the accident happened ? \n a- right on speed bump \n b-before speed bump \"</string>
    <string name="res1">fault on user 2 by 100%</string>
    <string name="res2">fault on both users by 50%</string>
    <string name="res3">fault on user 2 by 100%</string>
    <string name="res4">fault on user 2 by 100%</string>
    <string name="res5">\"are there any cars infront of user 1 when accident happened ? \n a- yes \n b- no \"</string>
    <string name="res6">fault on user 2 by 100%</string>
    <string name="res7">fault on both users  by 50%</string>
    <string name="res8">fault on both by 50%</string>
    <string name="q6">\"what caused the accident ? \n a- traffic \n b- sudden use of breaks \n c- reverse \n d- other \"</string>
    <string name="res9">\"the fault on user 2 by 100 % \"</string>
    <string name="res10">both users get 50% fault</string>
    <string name="res11">\"the fault on user 1 by 100 % \"</string>
    <string name="res12">Contact this number XXXXXXXX and the officer will come and assist</string>
    <string name="certify">I certify and pledge that the statment is all true !!</string>
    <string name="passres">\"Enter Your Email To Receive Reset Link at your email \"</string>
    <string name="errormsg">Something went wrong , try again later ...</string>
    <string name="startbotchat">You cant start chatbot before uploading image</string>
    <string name="thereisacc">\"There is an accident:( \"</string>
    <string name="noaccedent">There is No accident :)</string>
    <string name="noresult">No result return , check the service</string>
    <string name="accresults">Accident Result</string>
    <string name="ddd">\"Didn\'t recognize your input , try to write as requested !! \"</string>
    <string name="alert">Alert</string>
    <string name="alert2">\"You Should Scan Qr code First \"</string>
    <string name="upoadimgprog">Image Upload.... , Please wait for your result</string>
</resources>