<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/darker_gray"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/userAvatarIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_code_n_note_this_code_for_the_second_user_to_scan_it"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"

        />



    <EditText
        android:id="@+id/acident_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input"
        android:hint="@string/accident_address"
        android:inputType="text"
        android:backgroundTint="@color/secondry_color"
        android:padding="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/carplate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input"
        android:hint="@string/car_plate"
        android:backgroundTint="@color/secondry_color"
        android:inputType="text"
        android:padding="15dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/idScanner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/input"
            android:editable="false"
            android:backgroundTint="@color/secondry_color"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/accident_id_member"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scannerBtn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="5dp"
            android:background="@drawable/input"

            android:gravity="center"
            android:text="QR"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/input"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:backgroundTint="@color/secondry_color"

            android:hint="@string/accident_time"
            android:padding="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/generate_time"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="5dp"
            android:background="@drawable/input"

            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addAccident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/input"
        android:padding="15dp"
        android:text="@string/add"
        android:textColor="@color/white"

        android:textStyle="bold" />

    <ProgressBar
        android:visibility="gone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:id="@+id/addAccident_prog"
        />
</LinearLayout>